# Personal_Agents

./: .gitignore  README.md  main.py  pyproject.toml  run_web.sh  server.py  setup_agents.sh
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
personal_agents/: cli.py  demo.py
personal_agents/agents/: clone_generator.py  dynamic_agent.py  gardener.py  general.py  medicator.py  party.py  scheduler.py  system_agent.py
personal_agents/core/: agent.py  llm.py  orchestrator.py
