[project]
name = "personal-agents"
version = "0.1.0"
description = "Personal AI Agent System - A lightweight multi-agent framework for everyday tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
agents = "personal_agents.cli:main"

[tool.setuptools.packages.find]
include = ["personal_agents*"]
